<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andrumio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_track_list">TrackListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="browse_artists">Browse Artists</string>
    <string name="browse_files">Browse Files</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="artists">Artists</string>
    <string name="playlist">Playlist</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="strCity">City</string>
    <string name="strWeather">Weather</string>
    <string name="placeholder">Placeholder</string>
    <string name="remove">Remove</string>
    <string name="play_now">Play Now</string>

</resources>
